--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch --env-file=.env src/http/server.ts",
-    "test": "jest"
+    "db:migrate:test": "dotenv -e .env.test -- drizzle-kit migrate",
+    "pretest": "npm run db:migrate:test",
+    "test": "dotenv -e .env.test -- jest",
+    "test:watch": "dotenv -e .env.test -- jest --watch",
+    "test:ci": "jest"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +22,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.4",
     "@types/pg": "^8.15.4",
+    "dotenv-cli": "^8.0.0",
     "drizzle-kit": "^0.31.3",
     "jest": "^30.0.3",
     "ts-jest": "^29.4.0",
