Function: Criação da logica de enviar email, e fazer o login via magic link

--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,6 @@
 DATABASE_URL='postgres://docker:docker@localhost:5432/axondb'
 NODE_ENV=development
+MAIL_FROM=teste@email.com
+MAIL_PASSWORD=senhafake
+FRONTEND_URL=http://localhost:3000
+JWT_SECRET=secret-test
