--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.4",
+    "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.15.4",
     "dotenv-cli": "^8.0.0",
     "drizzle-kit": "^0.31.3",
@@ -38,6 +39,8 @@
     "drizzle-orm": "^0.44.2",
     "fastify": "5.4.0",
     "fastify-type-provider-zod": "^5.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.3",
     "pg": "^8.16.2",
     "postgres": "^3.4.7",
     "uuid": "^11.1.0",
