--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@fastify/cors": "^11.0.1",
     "@fastify/swagger": "^9",
     "@fastify/swagger-ui": "2",
     "bcrypt": "^6.0.0",
