--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@fastify/cors": "^11.0.1",
+    "@fastify/jwt": "^9.1.0",
     "@fastify/swagger": "^9",
     "@fastify/swagger-ui": "2",
     "bcrypt": "^6.0.0",
